# goe

./: .gitignore  README.md  TODO.md  main.py  notes.md  pyproject.toml
config/: data.yaml
configs/: data.yaml
paper/: aes2e.bib  aes2e.cls  paper.fdb_latexmk  paper.fls  paper.tex  paper.txt  rmaa.bib  rmaa_main.aux  rmaa_main.fdb_latexmk  rmaa_main.fls  rmaa_main.txt  rmaa_main2.aux  rmaa_main2.fdb_latexmk  rmaa_main2.fls  rmaa_main2.tex
paper/rmaa-rho-class/: rmaa-rho.cls
preprocessing/: build_features.py
scripts/: download_data.py  eval.py  load_data.py  process_data.py  run.py  train.py
src/: config.py  data.py
src/data/: augmentations.py  dataset.py  download.py  downloader.py  loading.py  losses.py  patches.py  processing.py  server.py
src/io/: listing.py  loading.py  saving.py
src/model/: model.py
src/model/layers/: encoder.py  heads.py  router.py
src/models/: decoder.py  encoder.py  experts.py  goe.py  router.py  stem.py
src/processing/: features.py
src/routing/: graph.py  policies.py  regularizers.py
src/stages/: encoder.py  experts.py  input_stem.py  recombination.py  router.py
src/utils/: config.py  metrics.py
tests/: test_encoder.py  test_end_to_end.py  test_experts.py  test_router.py  test_stem.py
