[project]
name = "goe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "numpy>=2.3.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tifffile>=2025.10.4",
    "tqdm>=4.67.1",
    "zarr>=3.1.3",
]
