[project]
name = "graph-of-experts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "numpy>=2.3.4",
    "pytest>=9.0.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tifffile>=2025.10.16",
    "torch>=2.9.1",
    "zarr>=3.1.3",
]
